--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>Agenda de Contatos</title>
+<link rel="icon" href="imagens/favicon.png">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<img src="imagens/agenda.png">
 	<h1>Agenda de Contatos</h1>
-	<a href="">Acessar</a>
+	<a href="main" class="Botao1">Acessar</a>
 </body>
 </html>
